--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <title>
+      K-Wave Wiz | Your Ultimate Destination for K-pop Trivia and Fun!
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
